@@ -416,7 +416,6 @@
         </entry>
       </map>
     </option>
-    <option name="myVersion" value="123" />
   </component>
   <component name="VcsDirectoryMappings">
     <mapping directory="" vcs="svn" />
